apps/mozi/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mozi
  labels:
    app.kubernetes.io/name: mozi
