apps/mozi/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mozi
  namespace: mozi
  labels:
    app.kubernetes.io/name: mozi
    app.kubernetes.io/instance: mozi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mozi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mozi
    spec:
      serviceAccountName: mozi
      containers:
        - name: web
          image: ghcr.io/wlodzimierrr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
