apps/mozi/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mozi
  namespace: mozi
  labels:
    app.kubernetes.io/name: mozi
    app.kubernetes.io/instance: mozi
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mozi
  ports:
    - name: http
      port: 80
      targetPort: http
