apps/mozi/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mozi
  namespace: mozi
  labels:
    app.kubernetes.io/name: mozi
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: mozi.dev.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mozi
                port:
                  number: 80
